--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@
     color: #fff;
     font-size: 1.5vw;
     font-weight:500;
+    font-family: a;
   }
   .page-one-botom-end>button{
     border: 0;
@@ -119,10 +120,27 @@
     color: var(--bgtwo);
     width: 140px;
   }
-  .page_two{
+  .page2{
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    font-family: a;
+   
+    flex-direction: column;
     height: 100vh;
     width: 100vw;
     position: relative;
     background-color: #0b48ed;
+    padding: 0vw 8vw;
+    color: #dadadab6;
   }
- 
+  .page2>h2{
+    font-weight: 100;
+    font-size: 2vw;
+  }
+  .page2>h1{
+    width: 90%;
+    font-size: 4.5vw;
+    line-height: 1.3;
+    margin-top: 2vw;
+  }
