--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@
     position: absolute;
     height: 10vh;
     width: 100vw;
+    position: absolute;
     
   }
   .page_one>nav>img{
@@ -69,8 +70,10 @@
     justify-content: center;
     gap: 20px;
     padding-right: 20px;
+   
   }
   .nav-rgt>button{
+
     border: 0;
     outline: 0;
     padding: 10px 20px;
@@ -80,6 +83,7 @@
     color: #fff;
     font-size: 15px;
   }
+  
   .page-one-botom{
     position: absolute;
     bottom: 4%;
@@ -140,6 +144,80 @@
   }
   .page2>h1{
     width: 90%;
+    font-size: 4.5vw;
+    line-height: 1.3;
+    margin-top: 2vw;
+  }
+  .page3{
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+    background: #0b48ed;
+  }
+  .page3>canvas{
+    max-height: 100vh;
+    max-width: 100vw;
+    position: relative;
+  }
+  .page4{
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    font-family: a;
+   
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+    background-color: #0b48ed;
+    padding: 0vw 8vw;
+    color: #dadadab6;
+
+  }
+  .page4>h2{
+    font-weight: 100;
+    font-size: 2vw;
+  }
+  .page4>h1{
+    width: 100%;
+    font-weight: 100;
+    font-size: 4.5vw;
+    line-height: 1.3;
+    margin-top: 2vw;
+  }
+  .page5{
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+    background: #0b48ed;
+  }
+  .page5>canvas{
+    max-height: 100vh;
+    max-width: 100vw;
+    position: relative;
+  }
+  .page6{
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    font-family: a;
+   
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+    background-color: #0b48ed;
+    padding: 0vw 8vw;
+    color: #dadadab6;
+
+  }
+  .page6>h2{
+    font-weight: 100;
+    font-size: 2vw;
+  }
+  .page6>h1{
+    width: 100%;
+    font-weight: 100;
     font-size: 4.5vw;
     line-height: 1.3;
     margin-top: 2vw;
