--- a/style.css
+++ b/style.css
@@ -232,9 +232,29 @@
     width: 100vw;
     position: relative;
     background: #0b48ed;
+
   }
   .page7>canvas{
-   max-height: 100vh;
+   height: 100vh;
     max-width: 100vw;
     position: relative;
+  }
+  .page7-circle{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 9;
+    transform: translate(-50%, -50%);
+    height: 30vw; width: 30vw;
+    border-radius: 50%; border: 1px solid #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .page7-cir-inner{
+    height: 70%;
+    width: 70%;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 1px solid #fff;
   }
